--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,9 @@
 
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <!-- DOMPurify for XSS protection -->
+    <script src="https://cdn.jsdelivr.net/npm/dompurify@3.0.6/dist/purify.min.js"
+            crossorigin="anonymous"></script>
 
     <script type="module" src="js/main.js"></script>
 
